Fix terms overflow.

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -3621,7 +3621,7 @@ a {
   cursor: pointer;
 }
 .terms-content {
-  margin: 0 auto -120px;
+  margin: 0 auto;
   text-align: center;
   width: 70%;
 }
